[BUG] Correções Homework2